--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 TOKEN=7504123410:AAEznGqRafbyrBx2e34HzsxztWV201HRMxE
-DAILY_LIMIT=3
+DAILY_LIMIT=1111111111111
 REFERRAL_REWARD=1
+ADMIN_ID=1939282952
