--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ TOKEN=7504123410:AAEznGqRafbyrBx2e34HzsxztWV201HRMxE
 DAILY_LIMIT=1111111111111
 REFERRAL_REWARD=1
 ADMIN_ID=1939282952
+CHANNEL_USERNAME=-1003173491640
