--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 TOKEN=7504123410:AAEznGqRafbyrBx2e34HzsxztWV201HRMxE
-DAILY_LIMIT=1111111111111
+DAILY_LIMIT=3
 REFERRAL_REWARD=1
 ADMIN_ID=1939282952
 CHANNEL_USERNAME=-1003173491640
