--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-python-telegram-bot==21.5
-easyocr==1.7.1
-sympy==1.13.3
-Pillow==10.4.0
-python-dotenv==1.0.1
-requests==2.32.3
-Flask==3.0.3
+python-telegram-bot==20.8
+supabase>=2.0.0
+python-dotenv
+fastapi
+uvicorn[standard]
+pydantic
+Pillow
+easyocr
+requests
